# rospad-workspace

src/demos/demo_robot/: package.xml  setup.py
src/demos/demo_robot/demo_robot/: diff_drive_controller.py  rrt_planner.py
src/demos/demo_robot/launch/: demo.launch.py
src/demos/demo_robot/urdf/: demo_robot.urdf
src/demos/diffbot_control/: package.xml  setup.py
src/demos/diffbot_control/diffbot_control/: circle_drive.py  odometry_reader.py  teleop_keyboard.py
src/demos/diffbot_control/launch/: diffbot_control.launch.py
src/demos/service_demo/: package.xml  setup.py
src/demos/service_demo/launch/: service_demo.launch.py
src/demos/service_demo/service_demo/: add_two_ints_client.py  add_two_ints_server.py
src/demos/talker_listener/: package.xml  setup.py
src/demos/talker_listener/launch/: talker_listener.launch.py
src/demos/talker_listener/talker_listener/: listener.py  talker.py
src/demos/turtlesim_demo/: package.xml  setup.py
src/demos/turtlesim_demo/launch/: turtlesim.launch.py
src/demos/turtlesim_demo/turtlesim_demo/: teleop_key.py  turtle_node.py
src/demos/ur5_control/: package.xml  setup.py
src/demos/ur5_control/launch/: ur5_control.launch.py
src/demos/ur5_control/ur5_control/: joint_controller.py  joint_sine_demo.py  joint_state_publisher.py  joint_state_server.py  ur5_pose_client.py
src/my_first_package/: my_first_node.py
src/sys_packages/diffbot_description/: package.xml  setup.cfg  setup.py
src/sys_packages/diffbot_description/config/: diffbot_params.yaml
src/sys_packages/diffbot_description/launch/: diffbot_bringup.launch.py
src/sys_packages/diffbot_description/rviz/: diffbot.rviz
src/sys_packages/diffbot_description/scripts/: odometry_reader.py  teleop_keyboard.py
src/sys_packages/diffbot_description/urdf/: diffbot.urdf
src/sys_packages/ur5_description/: package.xml  setup.cfg  setup.py
src/sys_packages/ur5_description/config/: joint_limits.yaml
src/sys_packages/ur5_description/launch/: ur5_bringup.launch.py
src/sys_packages/ur5_description/rviz/: ur5.rviz
src/sys_packages/ur5_description/scripts/: joint_sine_demo.py  joint_state_publisher.py
src/sys_packages/ur5_description/urdf/: ur5.urdf
