<?xml version="1.0"?>
<package format="3">
  <name>demo_robot</name>
  <version>0.1.0</version>
  <description>Demo robot package for ROSpad — differential drive + RRT planner</description>
  <maintainer email="student@iitm.ac.in">Student</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
