<?xml version="1.0"?>
<package format="3">
  <name>turtlesim_demo</name>
  <version>0.1.0</version>
  <description>Turtlesim demo for ROSpad — browser ROS2 IDE</description>
  <maintainer email="student@rospad">Student</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>turtlesim</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
