<?xml version="1.0"?>
<package format="3">
  <name>ur5_control</name>
  <version>0.0.1</version>
  <description>UR5 arm control demos — joint state publishing, sine animation, and smooth pose sequencing</description>
  <maintainer email="student@github.com">Student</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
