<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_description</name>
  <version>1.0.0</version>
  <description>
    UR5 robot description package for ROSpad simulation.
    Contains URDF model, visual meshes, TF frames, launch files and RViz config.
    Derived from ros-industrial/universal_robot.
  </description>

  <maintainer email="nirav.robotics@gmail.com">nirav</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
